--- a/index.qmd
+++ b/index.qmd
@@ -7,7 +7,7 @@ format:
   html:
     code-fold: true
 course: Capstone Projects in Data Science
-bibliography: references.bib # file contains bibtex for references
+bibliography: references_deka.bib # file contains bibtex for references
 #always_allow_html: true # this allows to get PDF with HTML features
 self-contained: true
 execute: 
@@ -30,7 +30,7 @@ The receptive field of a Convolution Neural Network (CNN) is the specific region
 
 ## Literature Review
 
-The history of Convolution Neural Networks (CNN) is a rich one and one that spans multiple decades. CNNs have made much of the buzz as well as many advancements in deep learning in recent years, particularly in the domain of computer vision and image analysis. CNN architecture is heavily inspired by the biology of the visual cortex, which contains arrangements of simple and complex cells that activate based on specific subregions of the visual field, known as receptive fields (Indolia et al., 2018). Moreover, researchers Gu et al. point out about the rapid growth of annotated data and the significant improvements in the processing power of graphics processor units (GPUs) which has empowered research on convolutional neural networks even further leading to many state-of-the-art results on various tasks. (Gu et al., 2018)
+The history of Convolution Neural Networks (CNN) is a rich one and one that spans multiple decades. CNNs have made much of the buzz as well as many advancements in deep learning in recent years, particularly in the domain of computer vision and image analysis. CNN architecture is heavily inspired by the biology of the visual cortex, which contains arrangements of simple and complex cells that activate based on specific subregions of the visual field, known as receptive fields [@indoliaConceptualUnderstandingConvolutional2018]. Moreover, researchers Gu et al. point out about the rapid growth of annotated data and the significant improvements in the processing power of graphics processor units (GPUs) which has empowered research on convolutional neural networks even further leading to many state-of-the-art results on various tasks. [@guRecentAdvancesConvolutional2018]
 
 There are numerous models and architectures of CNN. A review article by Cong and Zhou goes into details about the 6 typical architectures of CNN. CNNs typically have these five basic layers, the input layer, the convolution layer, the pooling layer, the FC layer and the output layer. The paper talks about how AlexNet used ReLu activation function instead of tanh to reduce computation complexity and resolve the vanishing gradient problem. Moreover, the use of Local Response Normalization (LRN) and pooling (down-sampling) were also helpful in improving performance as well as reducing overfitting. There’s also mention of ZfNet or DeconvNet where researchers provided visualizations to understand the internal mechanism of a CNN architecture.
 
@@ -42,107 +42,58 @@ The article then looks into lightweight networks which are targeted towards mobi
 
 The fifth type of CNN architecture deals with object detection. The article introduces Regional CNN (R-CNN) which achieve object detection through three main ideas which are region proposals, feature extraction and region classification. Inspired by this and based on GoogLeNet, there’s a new detection method called the YOLO model, You Only Look Once which segments an input image into multiple bounding boxes and classifies the regions alongside the bounding boxes to detect objects.
 
-Finally, the last architecture is the Transformer Encoder where the article looks into Vision Transformers (ViT). Because transformers by themselves lack spatial inductive biases which leads to poor optimization, researchers have combined CNNs and ViTs to overcome it. (Cong & Zhou, 2023)
+Finally, the last architecture is the Transformer Encoder where the article looks into Vision Transformers (ViT). Because transformers by themselves lack spatial inductive biases which leads to poor optimization, researchers have combined CNNs and ViTs to overcome it. [@congReviewConvolutionalNeural2023]
 
 
+## Dataset
 
-*This is my work and I want to add more work...*
+For this project we have decided to use a dataset based on the Carla Driving Simulator, an open-source simulator designed for autonomous driving research. Carla provides a realistic and diverse set of driving scenarios that are ideal for training models for tasks like lane detection, object detection, and semantic segmentation.
+
+* Dataset Source: Carla Driving Simulator.
+* Type of Task: Semantic Segmentation for lane boundary detection.
+* Image Size: The images in the dataset have a high resolution of 1024x512 pixels, allowing the model to capture intricate details of lane markings.
+* Annotation Format: Each image has a corresponding binary mask, where lane boundaries are marked with 1 (lane pixels) and the background is marked with 0 (non-lane pixels).
+* Driving Scenarios: The dataset contains various scenes, including urban roads, suburban areas, and highways, with different weather conditions (sunny, rainy) and times of the day (morning, evening, night). This diversity in conditions helps simulate real-world driving challenges.
+* Image Channels: The images are in RGB format, meaning they have 3 channels (Red, Green, Blue), and the corresponding masks are single-channel grayscale images.
+
+This dataset serves as the foundation for training a Convolutional Neural Network (CNN) for lane detection. The CNN will be evaluated on its ability to identify lane boundaries in diverse driving conditions.
+
+## Dataset Visualization
+
+The dataset contains over 6000 images of road scenes and label images for training and validation. 
+
+Example of one of the images.
+
+![](https://imgur.com/sAVhGgC)
+
+The label image is a grayscale png with 3 pixel values, which are 0,1,2.
+
+![](https://imgur.com/2A3k7z3)
+
+The following image is the label image visualized for human eyes with visually distinct color values. Here we can see the lane lines which serve as the label for training.
+
+![](https://imgur.com/LAKKKlk)
+
+### Receptive Fields in CNNs
+
+In Convolutional Neural Networks (CNNs), the receptive field refers to the area of the input image that influences the calculation of a particular neuron in the output feature map. Receptive field size plays a crucial role in CNNs, particularly in tasks like semantic segmentation, where understanding larger contextual information (e.g., the full view of a lane or road) is important for accurate segmentation.
+
+* Smaller Receptive Fields (using smaller kernels like 3x3) capture finer details and help the model focus on localized features such as the lane markings.
+* Larger Receptive Fields (using larger kernels like 5x5 or increasing network depth) help the model capture broader contextual information, which can be essential for detecting lanes over long distances or in complex, curved road structures.
+
+In this project, we experiment with different receptive field sizes by altering kernel sizes, stride values, and network depths to analyze how they affect the model's ability to detect lane boundaries accurately.
+Optimizing Receptive Fields for Semantic Segmentation in Lane Detection
+To optimize receptive fields for lane detection, we can adjust network architecture and configurations:
+1.	Dilated Convolutions: These allow the receptive field to expand without reducing the spatial resolution of the feature maps. They are particularly useful in capturing larger contextual areas while maintaining fine details.
+2.	Deeper Networks: Increasing the depth of the network naturally increases the receptive field. For lane detection, a deeper network can help capture both local details and larger scene context.
+3.	Pooling Layers: Max or average pooling layers reduce spatial dimensions and hence expand the receptive field. However, pooling too early in the network may lose critical lane details.
+4.	Encoder-Decoder Architectures: These are often used for semantic segmentation tasks like lane detection. The encoder gradually reduces the image size (increasing receptive field), while the decoder upsamples to the original size, preserving fine details for accurate lane boundary prediction.
 
 ## Methods
 
--   Detail the models or algorithms used.
-
--   Justify your choices based on the problem and data.
-
-*The common non-parametric regression model is*
-$Y_i = m(X_i) + \varepsilon_i$*, where* $Y_i$ *can be defined as the sum
-of the regression function value* $m(x)$ *for* $X_i$*. Here* $m(x)$ *is
-unknown and* $\varepsilon_i$ *some errors. With the help of this
-definition, we can create the estimation for local averaging i.e.*
-$m(x)$ *can be estimated with the product of* $Y_i$ *average and* $X_i$
-*is near to* $x$*. In other words, this means that we are discovering
-the line through the data points with the help of surrounding data
-points. The estimation formula is printed below [@R-base]:*
-
-$$
-M_n(x) = \sum_{i=1}^{n} W_n (X_i) Y_i  \tag{1}
-$$$W_n(x)$ *is the sum of weights that belongs to all real numbers.
-Weights are positive numbers and small if* $X_i$ *is far from* $x$*.*
-
-
-*Another equation:*
-
-$$
-y_i = \beta_0 + \beta_1 X_1 +\varepsilon_i
-$$
 
 ## Analysis and Results
 
-### Data Exploration and Visualization
 
--   Describe your data sources and collection process.
-
--   Present initial findings and insights through visualizations.
-
--   Highlight unexpected patterns or anomalies.
-
-A study was conducted to determine how...
-
-```{r, warning=FALSE, echo=T, message=FALSE}
-# loading packages 
-library(tidyverse)
-library(knitr)
-library(ggthemes)
-library(ggrepel)
-library(dslabs)
-```
-
-```{r, warning=FALSE, echo=TRUE}
-# Load Data
-kable(head(murders))
-
-ggplot1 = murders %>% ggplot(mapping = aes(x=population/10^6, y=total)) 
-
-  ggplot1 + geom_point(aes(col=region), size = 4) +
-  geom_text_repel(aes(label=abb)) +
-  scale_x_log10() +
-  scale_y_log10() +
-  geom_smooth(formula = "y~x", method=lm,se = F)+
-  xlab("Populations in millions (log10 scale)") + 
-  ylab("Total number of murders (log10 scale)") +
-  ggtitle("US Gun Murders in 2010") +
-  scale_color_discrete(name = "Region")+
-      theme_bw()
-  
-
-```
-
-### Modeling and Results
-
--   Explain your data preprocessing and cleaning steps.
-
--   Present your key findings in a clear and concise manner.
-
--   Use visuals to support your claims.
-
--   **Tell a story about what the data reveals.**
-
-```{r}
-
-```
-
-### Conclusion
-
--   Summarize your key findings.
-
--   Discuss the implications of your results.
-
-## References
-
-Cong, S., & Zhou, Y. (2023). A review of convolutional neural network architectures and their optimizations. Artificial Intelligence Review, 56(3), 1905–1969. https://doi.org/10.1007/s10462-022-10213-5
-
-Gu, J., Wang, Z., Kuen, J., Ma, L., Shahroudy, A., Shuai, B., Liu, T., Wang, X., Wang, G., Cai, J., & Chen, T. (2018). Recent advances in convolutional neural networks. Pattern Recognition, 77, 354–377. https://doi.org/10.1016/j.patcog.2017.10.013
-
-Indolia, S., Goswami, A. K., Mishra, S. P., & Asopa, P. (2018). Conceptual Understanding of Convolutional Neural Network- A Deep Learning Approach. Procedia Computer Science, 132, 679–688. https://doi.org/10.1016/j.procs.2018.05.069
 
 
