--- a/references_deka.bib
+++ b/references_deka.bib
@@ -142,3 +142,53 @@
 	year = {2018},
 	pages = {679--688},
 }
+
+@misc{zhangShuffleNetExtremelyEfficient2017,
+	title = {{ShuffleNet}: {An} {Extremely} {Efficient} {Convolutional} {Neural} {Network} for {Mobile} {Devices}},
+	shorttitle = {{ShuffleNet}},
+	url = {http://arxiv.org/abs/1707.01083},
+	doi = {10.48550/arXiv.1707.01083},
+	abstract = {We introduce an extremely computation-efficient CNN architecture named ShuffleNet, which is designed specially for mobile devices with very limited computing power (e.g., 10-150 MFLOPs). The new architecture utilizes two new operations, pointwise group convolution and channel shuffle, to greatly reduce computation cost while maintaining accuracy. Experiments on ImageNet classification and MS COCO object detection demonstrate the superior performance of ShuffleNet over other structures, e.g. lower top-1 error (absolute 7.8\%) than recent MobileNet on ImageNet classification task, under the computation budget of 40 MFLOPs. On an ARM-based mobile device, ShuffleNet achieves {\textasciitilde}13x actual speedup over AlexNet while maintaining comparable accuracy.},
+	urldate = {2025-03-03},
+	publisher = {arXiv},
+	author = {Zhang, Xiangyu and Zhou, Xinyu and Lin, Mengxiao and Sun, Jian},
+	month = dec,
+	year = {2017},
+	note = {arXiv:1707.01083 [cs]},
+	keywords = {Computer Science - Computer Vision and Pattern Recognition},
+	file = {Preprint PDF:C\:\\Users\\deka_\\Zotero\\storage\\3M8HW5QJ\\Zhang et al. - 2017 - ShuffleNet An Extremely Efficient Convolutional Neural Network for Mobile Devices.pdf:application/pdf;Snapshot:C\:\\Users\\deka_\\Zotero\\storage\\7I9DLH2M\\1707.html:text/html},
+}
+
+@inproceedings{iofinovaHowWellSparse2022,
+	address = {New Orleans, LA, USA},
+	title = {How {Well} {Do} {Sparse} {ImageNet} {Models} {Transfer}?},
+	copyright = {https://doi.org/10.15223/policy-029},
+	isbn = {978-1-6654-6946-3},
+	url = {https://ieeexplore.ieee.org/document/9878988/},
+	doi = {10.1109/CVPR52688.2022.01195},
+	urldate = {2025-03-03},
+	booktitle = {2022 {IEEE}/{CVF} {Conference} on {Computer} {Vision} and {Pattern} {Recognition} ({CVPR})},
+	publisher = {IEEE},
+	author = {Iofinova, Eugenia and Peste, Alexandra and Kurtz, Mark and Alistarh, Dan},
+	month = jun,
+	year = {2022},
+	pages = {12256--12266},
+	file = {Submitted Version:C\:\\Users\\deka_\\Zotero\\storage\\4K8C78AQ\\Iofinova et al. - 2022 - How Well Do Sparse ImageNet Models Transfer.pdf:application/pdf},
+}
+
+@inproceedings{wangEdgeenhancedFeatureDistillation2022,
+	address = {New Orleans, LA, USA},
+	title = {Edge-enhanced {Feature} {Distillation} {Network} for {Efficient} {Super}-{Resolution}},
+	copyright = {https://doi.org/10.15223/policy-029},
+	isbn = {978-1-6654-8739-9},
+	url = {https://ieeexplore.ieee.org/document/9857361/},
+	doi = {10.1109/CVPRW56347.2022.00093},
+	urldate = {2025-03-03},
+	booktitle = {2022 {IEEE}/{CVF} {Conference} on {Computer} {Vision} and {Pattern} {Recognition} {Workshops} ({CVPRW})},
+	publisher = {IEEE},
+	author = {Wang, Yan},
+	month = jun,
+	year = {2022},
+	pages = {776--784},
+	file = {Submitted Version:C\:\\Users\\deka_\\Zotero\\storage\\9ASW2SPP\\Wang - 2022 - Edge-enhanced Feature Distillation Network for Efficient Super-Resolution.pdf:application/pdf},
+}
