--- a/index.qmd
+++ b/index.qmd
@@ -10,6 +10,7 @@ course: Capstone Projects in Data Science
 bibliography: references_deka.bib # file contains bibtex for references
 #always_allow_html: true # this allows to get PDF with HTML features
 self-contained: true
+jupyter: python3
 execute: 
   warning: false
   message: false
@@ -23,18 +24,19 @@ editor:
 Slides: [slides.html](slides.html){target="_blank"} ( Go to `slides.qmd` to edit)
 
 
-## Introduction
+
+## Abstract
 
 The receptive field of a Convolution Neural Network (CNN) is the specific region in input data that activates the neurons i.e. the features captured by a convolution layer. This region determines the level of feature extraction, or learning from the input which ultimately impacts the quality of the output. Different sizes of receptive fields may be optimal for different tasks. This also means that the effective receptive field for a given task will vary with variation in the input. For example a magnified image vs a large zoomed out scene will yield vastly different features for the same receptive field. In this study, we aim to identify the optimal sizes and combination of convolution filters for effective receptive fields for certain tasks. In other words, we want to experiment different configurations of convolutional filters and network architectures that affect the effective receptive field using different kernel sizes, strides, and depths across different datasets and tasks. With that we hope to identify generalizable principles for designing CNNs with optimal feature extraction capabilities.
 
 
-## Literature Review
+## Introduction
 
-The history of Convolution Neural Networks (CNN) is a rich one and one that spans multiple decades. CNNs have made much of the buzz as well as many advancements in deep learning in recent years, particularly in the domain of computer vision and image analysis. CNN architecture is heavily inspired by the biology of the visual cortex, which contains arrangements of simple and complex cells that activate based on specific subregions of the visual field, known as receptive fields [@indoliaConceptualUnderstandingConvolutional2018]. Moreover, researchers Gu et al. point out about the rapid growth of annotated data and the significant improvements in the processing power of graphics processor units (GPUs) which has empowered research on convolutional neural networks even further leading to many state-of-the-art results on various tasks. [@guRecentAdvancesConvolutional2018]
+The history of Convolution Neural Networks (CNN) is a rich one and one that spans multiple decades. CNN architecture is heavily inspired by the biology of the visual cortex, which contains arrangements of simple and complex cells that activate based on specific subregions of the visual field, known as receptive fields [@indoliaConceptualUnderstandingConvolutional2018]. CNNs have made much of the buzz as well as many advancements in deep learning in recent years, particularly in the domain of computer vision and image analysis. Its application can be found in industrial settings like in fault detection, in medical imaging for disease detection through classification [@yamashitaConvolutionalNeuralNetworks2018], or in consumer situations like face detection in digital cameras or object detection in driving systems.  Moreover, researchers Gu et al. point out about the rapid growth of annotated data and the significant improvements in the processing power of graphics processor units (GPUs) which has empowered research on CNNs even further leading to many state-of-the-art models and their results on various tasks. [@guRecentAdvancesConvolutional2018]
 
-There are numerous models and architectures of CNN. A review article by Cong and Zhou goes into details about the 6 typical architectures of CNN. CNNs typically have these five basic layers, the input layer, the convolution layer, the pooling layer, the FC layer and the output layer. The paper talks about how AlexNet used ReLu activation function instead of tanh to reduce computation complexity and resolve the vanishing gradient problem. Moreover, the use of Local Response Normalization (LRN) and pooling (down-sampling) were also helpful in improving performance as well as reducing overfitting. There’s also mention of ZfNet or DeconvNet where researchers provided visualizations to understand the internal mechanism of a CNN architecture.
+There are numerous models and architectures of CNN. A review article by Cong and Zhou goes into details about the 6 typical architectures of CNN. CNNs typically have these five basic layers which are the input layer, the convolution layer, the pooling layer, the Fully Connected (FC) layer (also known as the Dense layer) and the output layer. The paper talks about how AlexNet used ReLu activation function instead of tanh to reduce computation complexity and resolve the vanishing gradient problem. Moreover, the use of Local Response Normalization (LRN) and pooling (down-sampling) were also helpful in improving performance as well as reducing overfitting. There’s also mention of ZfNet or DeconvNet where researchers provided visualizations to understand the internal mechanism of a CNN architecture.
 
-The article then talks about VGG Net where CNNs are split into smaller filters (or kernels) thereby increasing the depth of the network. There’s also mention of GoogLeNet and its use of multiple filters of varying sizes stacked together to extract features of different sizes. The authors mention that Batch Normalization was a major contribution with the introduction of InceptionV2 model which improved backpropagation and the gradient vanishing problem.
+The article then talks about VGG Net where CNNs are split into smaller filters (or kernels) thereby increasing the depth of the network. There’s also mention of GoogLeNet and its use of multiple filters of varying sizes stacked together to extract features of different sizes. The authors mention that Batch Normalization was a major contribution with the introduction of the InceptionV2 model which improved backpropagation and the gradient vanishing problem.
 
 Then there’s the idea of cross-layer connection which is different from prior architectures where connections existed only between adjacent layers. ResNet implemented this cross-layer connection through shortcut connections where the input is transferred across multiple layers and then features are aggregated which improved accuracy. This is an example of widening the network which is opposite to that of deepening the network. Finally, there’s info about the DenseNet which is a CNN architecture with dense connections where each layer is connected to every other layer. A bad side effect of this is that the model relearns the same features repeatedly.
 
@@ -43,6 +45,24 @@ The article then looks into lightweight networks which are targeted towards mobi
 The fifth type of CNN architecture deals with object detection. The article introduces Regional CNN (R-CNN) which achieve object detection through three main ideas which are region proposals, feature extraction and region classification. Inspired by this and based on GoogLeNet, there’s a new detection method called the YOLO model, You Only Look Once which segments an input image into multiple bounding boxes and classifies the regions alongside the bounding boxes to detect objects.
 
 Finally, the last architecture is the Transformer Encoder where the article looks into Vision Transformers (ViT). Because transformers by themselves lack spatial inductive biases which leads to poor optimization, researchers have combined CNNs and ViTs to overcome it. [@congReviewConvolutionalNeural2023]
+
+CNNs are inherently compute heavy because they contain a lot of parameters and structural redundancy with deeper network architectures for feature extraction. Recent advancements in lightweight deep convolutional neural networks (DCNNs) have primarily focused on optimizing network architecture to balance accuracy and computational efficiency. One of the primary strategies for achieving this balance is depthwise separable dilated convolutions, as presented in this Dual Residual and Large Receptive Field Network (DRLN) novel architecture by [@panDualResidualLarge2024]. Dilated convolutions introduce holes or spaces between kernel elements, effectively increasing the receptive field without increasing the number of parameters. ShuffleNet further enhances this approach by incorporating group convolutions and channel shuffling to improve information flow while maintaining efficiency.[@zhangShuffleNetExtremelyEfficient2017]
+
+Other architectural innovations include EfficientNet’s compound scaling method, which uniformly scales depth, width, and resolution to optimize efficiency.[@tanEfficientNetRethinkingModel2020] Furthermore, NAS (Neural Architecture Search)-designed models have demonstrated promising results in automating the design of lightweight networks, with MobileNetV3 [@congReviewConvolutionalNeural2023] integrating NAS techniques to improve upon its predecessors.
+
+Another key direction in lightweight DCNNs is model compression, which reduces the memory footprint and computational burden without significantly sacrificing accuracy. Pruning techniques, such as structured and unstructured pruning, remove redundant parameters by eliminating less important weights or entire channels [@iofinovaHowWellSparse2022]. Quantization, which reduces the precision of model parameters from floating-point to lower-bit representations (e.g., 8-bit integer), is another widely used technique that significantly reduces memory consumption and inference latency [@panDualResidualLarge2024]. Two widely used quantization methods are post-training quantization (PTQ) and quantization-aware-training (QAT) with PTQ being the more popular one since it can restore the performance of the model without requiring the original training pipeline. [@chenReviewLightweightDeep2024]
+
+Knowledge distillation has also gained traction as an effective compression method, wherein a large, well-trained teacher network transfers knowledge to a smaller student network, improving the student's performance while keeping it computationally lightweight [@wangEdgeenhancedFeatureDistillation2022]. Additionally, low-rank decomposition methods decompose weight matrices into smaller, efficient representations, further enhancing compactness.
+
+The receptive field plays a critical role in the performance of CNNs, as it determines how much context a neuron captures. Recent studies [@luoUnderstandingEffectiveReceptive2017] highlight that the effective receptive field (ERF) is significantly smaller than the theoretical receptive field, limiting the network's ability to integrate global information efficiently. This phenomenon has implications for lightweight CNNs, where reducing the number of parameters can inadvertently shrink the ERF, potentially affecting recognition accuracy.
+
+Several strategies have been proposed to mitigate this issue in lightweight networks. Dilated convolutions, for example, expand the receptive field without increasing parameter count, making them particularly useful for mobile-friendly models. Additionally, skip connections, as seen in ResNet architectures, help maintain feature propagation across layers, addressing the limitations imposed by a reduced ERF.
+
+Benchmarking lightweight CNNs requires comprehensive evaluation across multiple datasets and hardware platforms. Common benchmark datasets such as ImageNet, CIFAR-10, and COCO are widely used to assess classification and detection performance [@panDualResidualLarge2024],[@wangPooDLePooledDense2024]. However, real-world deployment also necessitates testing on edge devices to measure latency, power consumption, and memory efficiency.
+
+Despite significant advancements, several challenges remain in designing lightweight CNNs. One area of interest is the development of hardware-aware NAS techniques that tailor models to specific device constraints. Additionally, improving the trade-off between accuracy and efficiency through novel loss functions and training paradigms remains an open research problem. Finally, better understanding and optimization of ERF in lightweight models can further enhance their effectiveness in real-world applications.
+
+By addressing these challenges, future research can drive further improvements in lightweight CNNs, making them even more suitable for deployment in resource-constrained environments such as mobile devices, autonomous systems, and IoT applications.
 
 
 ## Dataset
@@ -54,9 +74,9 @@ For this project we have decided to use a dataset based on the Carla Driving Sim
 * Image Size: The images in the dataset have a high resolution of 1024x512 pixels, allowing the model to capture intricate details of lane markings.
 * Annotation Format: Each image has a corresponding binary mask, where lane boundaries are marked with 1 (lane pixels) and the background is marked with 0 (non-lane pixels).
 * Driving Scenarios: The dataset contains various scenes, including urban roads, suburban areas, and highways, with different weather conditions (sunny, rainy) and times of the day (morning, evening, night). This diversity in conditions helps simulate real-world driving challenges.
-* Image Channels: The images are in RGB format, meaning they have 3 channels (Red, Green, Blue), and the corresponding masks are single-channel grayscale images.
+* Image Channels: The images are in RGB format, meaning they have 3 channels (Red, Green, Blue), and the corresponding label masks are grayscale images with pixel values 0,1 and 2.
+* Total samples - 6408 pngs files = 3075 train + 3075 train_label + 129 val + 129 val_label images 
 
-This dataset serves as the foundation for training a Convolutional Neural Network (CNN) for lane detection. The CNN will be evaluated on its ability to identify lane boundaries in diverse driving conditions.
 
 ## Dataset Visualization
 
@@ -66,7 +86,7 @@ Example of one of the images.
 
 ![](https://imgur.com/sAVhGgC)
 
-The label image is a grayscale png with 3 pixel values, which are 0,1,2.
+The label images are grayscale pngs with 3 pixel values, which are 0,1,2.
 
 ![](https://imgur.com/2A3k7z3)
 
@@ -74,9 +94,143 @@ The following image is the label image visualized for human eyes with visually d
 
 ![](https://imgur.com/LAKKKlk)
 
-### Receptive Fields in CNNs
 
-In Convolutional Neural Networks (CNNs), the receptive field refers to the area of the input image that influences the calculation of a particular neuron in the output feature map. Receptive field size plays a crucial role in CNNs, particularly in tasks like semantic segmentation, where understanding larger contextual information (e.g., the full view of a lane or road) is important for accurate segmentation.
+### Exploring summary statistics of the dataset images
+
+Since the images contain all three RGB channels, we perform some statistics to understand the distribution of each individual RGB channel as well as the RGB colors themselves.
+
+
+```{python}
+import numpy as np
+from PIL import Image
+from skimage import color as skcolor
+from collections import Counter
+import matplotlib.pyplot as plt
+
+def analyze_image(image_path):
+    img = Image.open(image_path)
+    img_array = np.array(img)
+
+    rgb_means = np.mean(img_array, axis=(0, 1))
+    rgb_medians = np.median(img_array, axis=(0, 1))
+    rgb_mins = np.min(img_array, axis=(0, 1))
+    rgb_maxs = np.max(img_array, axis=(0, 1))
+    rgb_stds = np.std(img_array, axis=(0, 1))
+
+    # Color distribution
+    rgb_hist = [np.histogram(img_array[:,:,i], bins=256, range=(0,256))[0] for i in range(3)]
+
+    # Dominant colors (top 5)
+    pixels = img_array.reshape(-1, 3)
+    counts = Counter(map(tuple, pixels))
+    dominant_colors = counts.most_common(5)
+
+    # Luminosity - the array of number is based on how the human eye perceives brightness in the RGB channels
+    luminosity = np.dot(rgb_means, [0.299, 0.587, 0.114])
+
+    print(f"RGB Means: R={rgb_means[0]:.2f}, G={rgb_means[1]:.2f}, B={rgb_means[2]:.2f}")
+    print(f"RGB Medians: R={rgb_medians[0]:.2f}, G={rgb_medians[1]:.2f}, B={rgb_medians[2]:.2f}")
+    print(f"RGB Mins: R={rgb_mins[0]}, G={rgb_mins[1]}, B={rgb_mins[2]}")
+    print(f"RGB Maxs: R={rgb_maxs[0]}, G={rgb_maxs[1]}, B={rgb_maxs[2]}")
+    print(f"RGB Standard Deviations: R={rgb_stds[0]:.2f}, G={rgb_stds[1]:.2f}, B={rgb_stds[2]:.2f}")
+    print(f"Luminosity: {luminosity:.2f}")
+
+
+    print("\n\nTop 5 Dominant Colors (RGB, count):")
+    for rgb_vals, count in dominant_colors:
+        print(f"  {rgb_vals[0]:4d} {rgb_vals[1]:4d} {rgb_vals[2]:4d} : {count}")
+
+    # Plot histograms
+    fig, axs = plt.subplots(3, 1, figsize=(10, 10))
+    colors = ['red', 'green', 'blue']
+    for i, (hist, color) in enumerate(zip(rgb_hist, colors)):
+        axs[i].bar(range(256), hist, color=color, alpha=0.7)
+        axs[i].set_title(f'{color.capitalize()} Channel Histogram')
+    plt.tight_layout()
+    plt.show()
+
+# Usage
+analyze_image("C:/Users/deka_/Desktop/Testing/Datasets/carla-lane/train/Town04_Clear_Noon_09_09_2020_14_57_22_frame_569.png")
+```
+
+Summary statistics of a sample of the training dataset. In this case we're taking 10% of the dataset as our sample.
+
+
+```{python}
+import os
+
+base_dir = "C:/Users/deka_/Desktop/Testing/Datasets/carla-lane/train"
+all_files = os.listdir(base_dir)
+
+all_R = np.empty((0,), dtype=np.uint8)
+all_G = np.empty((0,), dtype=np.uint8)
+all_B = np.empty((0,), dtype=np.uint8)
+all_dominants = Counter()
+
+sample_len = int(len(all_files) * .1)
+
+for file in all_files[:sample_len]:
+    img = Image.open(f"{base_dir}/{file}")
+    img_array = np.array(img)
+
+    pixels = img_array.reshape(-1, 3)
+
+    all_R = np.concatenate((all_R, pixels[:,0]))
+    all_G = np.concatenate((all_G, pixels[:,1]))
+    all_B = np.concatenate((all_B, pixels[:,2]))
+
+    counts = Counter(map(tuple, pixels))
+    dominant_colors = counts.most_common(5)
+    dominant_dict = dict(dominant_colors)
+    all_dominants.update(dominant_dict)
+```
+
+
+> Summary statistics of the RGB channels of the sample.
+
+```{python}
+print(f"RGB Means:    R = {round(np.mean(all_R)):>3}, G = {round(np.mean(all_G)):>3}, B = {round(np.mean(all_B)):>3}")
+print(f"RGB Medians:  R = {round(np.median(all_R)):>3}, G = {round(np.median(all_G)):>3}, B = {round(np.median(all_B)):>3}")
+print(f"RGB Mins:     R = {round(np.min(all_R)):>3}, G = {round(np.min(all_G)):>3}, B = {round(np.min(all_B)):>3}")
+print(f"RGB Maxs:     R = {round(np.max(all_R)):>3}, G = {round(np.max(all_G)):>3}, B = {round(np.max(all_B)):>3}")
+print(f"RGB Std Devs: R = {round(np.std(all_R)):>3}, G = {round(np.std(all_G)):>3}, B = {round(np.std(all_B)):>3}")
+```
+
+
+> The top 5 RGB colors in the sample and their count.
+
+```{python}
+for rgb_vals, count in all_dominants.most_common(5):
+    print(f"  {rgb_vals[0]:4d} {rgb_vals[1]:4d} {rgb_vals[2]:4d} : {count}")
+```
+
+
+```{python}
+
+rgb_hist = [
+    np.histogram(all_R, bins=256, range=(0,256))[0],
+    np.histogram(all_G, bins=256, range=(0,256))[0],
+    np.histogram(all_B, bins=256, range=(0,256))[0]
+]
+
+fig, axs = plt.subplots(3, 1, figsize=(10, 10))
+colors = ['red', 'green', 'blue']
+for i, (hist, color) in enumerate(zip(rgb_hist, colors)):
+    axs[i].bar(range(256), hist, color=color, alpha=0.7)
+    axs[i].set_title(f'{color.capitalize()} Channel Histogram')
+    axs[i].set_xlim(0, 255)  # Set consistent x-axis limits
+    axs[i].set_xlabel('Pixel Value')
+    axs[i].set_ylabel('Frequency')
+
+fig.suptitle('RGB Channel Distributions Across Sample Images', fontsize=16)
+plt.tight_layout()
+plt.show()
+```
+
+
+## Methods
+
+The receptive field in CNNs refers to the area of the input image that influences the calculation of a particular neuron in the output feature map. Receptive field size plays a crucial role in CNNs, particularly in tasks like semantic segmentation, where understanding larger contextual information (e.g., the full view of a lane or road) is important for accurate segmentation.
 
 * Smaller Receptive Fields (using smaller kernels like 3x3) capture finer details and help the model focus on localized features such as the lane markings.
 * Larger Receptive Fields (using larger kernels like 5x5 or increasing network depth) help the model capture broader contextual information, which can be essential for detecting lanes over long distances or in complex, curved road structures.
@@ -88,8 +242,6 @@ To optimize receptive fields for lane detection, we can adjust network architect
 2.	Deeper Networks: Increasing the depth of the network naturally increases the receptive field. For lane detection, a deeper network can help capture both local details and larger scene context.
 3.	Pooling Layers: Max or average pooling layers reduce spatial dimensions and hence expand the receptive field. However, pooling too early in the network may lose critical lane details.
 4.	Encoder-Decoder Architectures: These are often used for semantic segmentation tasks like lane detection. The encoder gradually reduces the image size (increasing receptive field), while the decoder upsamples to the original size, preserving fine details for accurate lane boundary prediction.
-
-## Methods
 
 
 ## Analysis and Results
