--- a/index.qmd
+++ b/index.qmd
@@ -230,18 +230,118 @@ plt.show()
 
 ## Methods
 
-The receptive field in CNNs refers to the area of the input image that influences the calculation of a particular neuron in the output feature map. Receptive field size plays a crucial role in CNNs, particularly in tasks like semantic segmentation, where understanding larger contextual information (e.g., the full view of a lane or road) is important for accurate segmentation.
+The main goal of this project is to evaluate how changes to the receptive field affect the performance of a CNN for lane detection. The following steps outline the experimental setup:
 
-* Smaller Receptive Fields (using smaller kernels like 3x3) capture finer details and help the model focus on localized features such as the lane markings.
-* Larger Receptive Fields (using larger kernels like 5x5 or increasing network depth) help the model capture broader contextual information, which can be essential for detecting lanes over long distances or in complex, curved road structures.
+**1. Network Architecture**
 
-In this project, we experiment with different receptive field sizes by altering kernel sizes, stride values, and network depths to analyze how they affect the model's ability to detect lane boundaries accurately.
-Optimizing Receptive Fields for Semantic Segmentation in Lane Detection
-To optimize receptive fields for lane detection, we can adjust network architecture and configurations:
-1.	Dilated Convolutions: These allow the receptive field to expand without reducing the spatial resolution of the feature maps. They are particularly useful in capturing larger contextual areas while maintaining fine details.
-2.	Deeper Networks: Increasing the depth of the network naturally increases the receptive field. For lane detection, a deeper network can help capture both local details and larger scene context.
-3.	Pooling Layers: Max or average pooling layers reduce spatial dimensions and hence expand the receptive field. However, pooling too early in the network may lose critical lane details.
-4.	Encoder-Decoder Architectures: These are often used for semantic segmentation tasks like lane detection. The encoder gradually reduces the image size (increasing receptive field), while the decoder upsamples to the original size, preserving fine details for accurate lane boundary prediction.
+We use a CNN-based architecture for semantic segmentation. To manipulate the receptive field, we employ various strategies, such as:
+
+* Kernel Size Variation: The effect of kernel size on receptive field will be evaluated by using different filter sizes (3x3, 5x5, and 7x7). Smaller kernels capture localized features, such as lane markings, while larger kernels help capture broader context, essential for detecting lane structure over long distances.
+* Network Depth: By increasing the depth of the network (i.e., adding more convolutional layers), the receptive field increases. Deeper networks are hypothesized to better capture long-range dependencies, important for lane detection in complex road environments.
+* Dilated Convolutions: Dilated convolutions expand the receptive field without decreasing the spatial resolution of feature maps. This technique helps preserve fine details (e.g., lane boundaries) while increasing the context captured by the network.
+* Pooling Layers: Pooling layers reduce the spatial resolution of feature maps, thus increasing the receptive field. However, excessive pooling can lead to the loss of critical details, especially in small or closely spaced lane markings. We will experiment with various pooling strategies (e.g., max pooling, average pooling) at different network depths.
+* Encoder-Decoder Architecture: The encoder-decoder architecture, commonly used for semantic segmentation tasks, will be implemented. The encoder gradually reduces the image resolution (increasing the receptive field), while the decoder upsamples to restore the original image resolution, preserving finer details needed for precise lane boundary detection.
+
+**2. Data Preprocessing**
+
+Data preprocessing steps include:
+
+* Image Resizing: Images will be resized to a uniform resolution (e.g., 256x256 or 512x512 pixels) to maintain consistency across the dataset.
+* Normalization: Pixel values of the images will be normalized to a range between 0 and 1 to improve convergence during training.
+* Data Augmentation: To increase the robustness of the model, data augmentation techniques like random flipping, rotation, and cropping will be applied to generate diverse training samples, thus helping the model generalize better across different road conditions.
+
+**3. Training Configuration**
+
+For the model training, the following setup will be used:
+Loss Function: The cross-entropy loss function will be used for training. This is a standard loss function for semantic segmentation tasks that penalizes the difference between predicted and ground truth segmentation masks.
+The formula for the cross-entropy loss for binary classification (e.g., predicting whether each pixel belongs to a lane or not) is:
+
+$\text{Loss} = -\left[ y \log(p) + (1 - y) \log(1 - p) \right]$
+
+Where:
+
+* y is the true label (0 or 1) of a given pixel (1 if it's a lane, 0 if it's not).
+* p is the predicted probability that the pixel belongs to class 1 (lane).
+* log is the natural logarithm.
+For multi-class classification (such as when there are more than two classes, like lane types or road segments), the formula generalizes as follows:
+
+$\text{Loss} = -\sum_{c=1}^C Y_c \log(p_c)$
+
+Where:
+* C is the number of classes (e.g., "lane", "road", "background").
+* $Y_c$ is the true label for class ccc (1 if the pixel belongs to class ccc, 0 otherwise).
+* $P_c$ is the predicted probability for class ccc for a given pixel.
+* The sum is taken over all classes.
+* Optimizer: The Adam optimizer will be used with an initial learning rate of 0.001. Learning rate scheduling will be implemented to adjust the learning rate during training, ensuring better convergence.
+The Adam optimizer computes updates using the following steps:
+
+1. Gradient Calculation: Let θt  be the parameters at time step t, and gt be the gradient of the loss function at time step t with respect to the parameters.
+
+2. Compute the Moving Averages:
+
+* The first moment estimate mt is the exponentially weighted moving average of the gradients: $m_t = \beta_1 m_{t-1} + (1 - \beta_1) g_t$
+* The second moment estimate vt is the exponentially weighted moving average of the squared gradients: $v_t = \beta_2 v_{t-1} + (1 - \beta_2) g_t^2$
+* Here, β1 and β2 are hyperparameters that control the decay rates of the moving averages for the first and second moments, respectively. Commonly used values are:
+* $\beta_1=0.9$
+* $\beta_2=0.999$
+
+3. Bias Correction: Since the moving averages are initialized to 0, they are biased toward 0 during the early time steps. To correct this, bias-corrected estimates \(\hat{m}_t\) and \(\hat{v}_t\) are computed as:
+\[
+\hat{m}_t = \frac{m_t}{1 - \beta_1^t}
+\]
+\[
+\hat{v}_t = \frac{v_t}{1 - \beta_2^t}
+\]
+The bias correction terms help to ensure that the moment estimates are unbiased, especially in the early stages of training.
+
+4. Parameter Update: Finally, the parameters are updated using the following rule:
+
+$\theta_{t+1} = \theta_t - \alpha \frac{\hat{m}_t}{\sqrt{\hat{v}_t} + \epsilon}$
+
+Where:
+
+* α is the learning rate (often set to 0.001),
+* $\epsilon$ is a small constant (e.g., $(10^{-7})$) to avoid division by zero.
+
+* Batch Size: A batch size of 16 will be used to balance between computational efficiency and memory constraints.
+* Training and Validation Split: 80% of the dataset will be used for training, and the remaining 20% will be used for validation to monitor performance and prevent overfitting.
+
+**4. Receptive Field Analysis**
+
+The receptive field will be manipulated and analyzed through the following strategies:
+
+* Varying Kernel Sizes: Models will be tested using convolutional kernels of 3x3, 5x5, and 7x7 sizes to investigate the trade-off between local feature capture and global context. The goal is to determine how kernel size affects lane detection accuracy, especially in complex road structures.
+* Increasing Network Depth: The effect of deeper architectures on receptive field size will be explored. Deeper networks will naturally increase the receptive field, which might help in detecting lanes across long distances or in intricate road layouts. We will compare shallow and deep architectures to assess the benefits.
+* Dilated Convolutions: Dilated convolutions will be incorporated into the network to expand the receptive field without down sampling. This allows the model to capture larger areas of the image while retaining spatial resolution for finer lane features.
+* Pooling Layers: Different configurations of pooling layers (e.g., max pooling vs. average pooling) will be evaluated to observe how they influence the receptive field. Pooling is known to increase the receptive field, but too much pooling early in the network might cause the loss of fine lane details.
+
+**5. Hyperparameter Tuning**
+
+The following hyperparameters will be tuned to optimize model performance:
+
+* Learning Rate: Experimentation with different learning rates to find the optimal value for faster convergence.
+* Number of Epochs: A sufficient number of epochs will be used (e.g., 50-100 epochs) to allow the model to converge. Early stopping will be implemented to prevent overfitting.
+* Batch Size: We will test different batch sizes to determine the best trade-off between memory usage and training stability.
+
+**6. Evaluation Metrics**
+
+The following evaluation metrics will be used to assess the performance of the models:
+
+* Pixel Accuracy: Measures the percentage of pixels that are correctly classified as part of the lane or background.
+* Mean Intersection over Union (mIoU): Calculates the overlap between predicted and ground truth lane masks, providing a measure of segmentation accuracy.
+* Dice Similarity Coefficient (DSC): This metric evaluates the similarity between the predicted and true lane masks, which is particularly important for imbalanced datasets.
+
+**7. Model Evaluation**
+
+Once trained, the model will be evaluated on the test set using the aforementioned metrics. The impact of receptive field adjustments (kernel sizes, network depth, dilated convolutions, pooling) on the model's performance will be carefully analyzed, particularly with respect to its ability to detect lane boundaries in different road conditions.
+Expected Outcomes
+We hypothesize that:
+
+* Larger receptive fields (via larger kernels, deeper networks, and dilated convolutions) will improve the model’s ability to detect long-range lane structures, especially on curved or complex roads.
+* Smaller receptive fields may be better for focusing on localized features, such as lane markings, but may struggle with more complex road geometries.
+* The encoder-decoder architecture will improve the segmentation accuracy by allowing the model to retain fine details while capturing broader contextual information.
+The results will guide us in identifying the most effective network configuration for optimal lane detection performance in autonomous driving applications.
+
 
 
 ## Analysis and Results
