--- a/references_deka.bib
+++ b/references_deka.bib
@@ -192,3 +192,51 @@
 	pages = {776--784},
 	file = {Submitted Version:C\:\\Users\\deka_\\Zotero\\storage\\9ASW2SPP\\Wang - 2022 - Edge-enhanced Feature Distillation Network for Efficient Super-Resolution.pdf:application/pdf},
 }
+
+@article{katoAdaptiveTvMFDice2024,
+	title = {Adaptive t-{vMF} dice loss: {An} effective expansion of dice loss for medical image segmentation},
+	volume = {168},
+	issn = {00104825},
+	shorttitle = {Adaptive t-{vMF} dice loss},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S0010482523011605},
+	doi = {10.1016/j.compbiomed.2023.107695},
+	language = {en},
+	urldate = {2025-04-09},
+	journal = {Computers in Biology and Medicine},
+	author = {Kato, Sota and Hotta, Kazuhiro},
+	month = jan,
+	year = {2024},
+	pages = {107695},
+}
+
+@misc{hanMamba3DEnhancingLocal2024,
+	title = {{Mamba3D}: {Enhancing} {Local} {Features} for {3D} {Point} {Cloud} {Analysis} via {State} {Space} {Model}},
+	copyright = {arXiv.org perpetual, non-exclusive license},
+	shorttitle = {{Mamba3D}},
+	url = {https://arxiv.org/abs/2404.14966},
+	doi = {10.48550/ARXIV.2404.14966},
+	abstract = {Existing Transformer-based models for point cloud analysis suffer from quadratic complexity, leading to compromised point cloud resolution and information loss. In contrast, the newly proposed Mamba model, based on state space models (SSM), outperforms Transformer in multiple areas with only linear complexity. However, the straightforward adoption of Mamba does not achieve satisfactory performance on point cloud tasks. In this work, we present Mamba3D, a state space model tailored for point cloud learning to enhance local feature extraction, achieving superior performance, high efficiency, and scalability potential. Specifically, we propose a simple yet effective Local Norm Pooling (LNP) block to extract local geometric features. Additionally, to obtain better global features, we introduce a bidirectional SSM (bi-SSM) with both a token forward SSM and a novel backward SSM that operates on the feature channel. Extensive experimental results show that Mamba3D surpasses Transformer-based counterparts and concurrent works in multiple tasks, with or without pre-training. Notably, Mamba3D achieves multiple SoTA, including an overall accuracy of 92.6\% (train from scratch) on the ScanObjectNN and 95.1\% (with single-modal pre-training) on the ModelNet40 classification task, with only linear complexity. Our code and weights are available at https://github.com/xhanxu/Mamba3D.},
+	urldate = {2025-04-11},
+	publisher = {arXiv},
+	author = {Han, Xu and Tang, Yuan and Wang, Zhaoxuan and Li, Xianzhi},
+	year = {2024},
+	note = {Version Number: 2},
+	keywords = {Artificial Intelligence (cs.AI), Computer Vision and Pattern Recognition (cs.CV), FOS: Computer and information sciences, Machine Learning (cs.LG)},
+	file = {PDF:C\:\\Users\\deka_\\Zotero\\storage\\37PK3T84\\Han et al. - 2024 - Mamba3D Enhancing Local Features for 3D Point Cloud Analysis via State Space Model.pdf:application/pdf},
+}
+
+@article{liCollaborativeEdgeComputing2022,
+	title = {Collaborative edge computing for distributed {CNN} inference acceleration using receptive field-based segmentation},
+	volume = {214},
+	issn = {13891286},
+	url = {https://linkinghub.elsevier.com/retrieve/pii/S1389128622002638},
+	doi = {10.1016/j.comnet.2022.109150},
+	language = {en},
+	urldate = {2025-04-20},
+	journal = {Computer Networks},
+	author = {Li, Nan and Iosifidis, Alexandros and Zhang, Qi},
+	month = sep,
+	year = {2022},
+	pages = {109150},
+	file = {Full Text:C\:\\Users\\deka_\\Zotero\\storage\\WS7I63BJ\\Li et al. - 2022 - Collaborative edge computing for distributed CNN inference acceleration using receptive field-based.pdf:application/pdf},
+}
